TimewritingApp/force-app/main/default/objects/TimeSheetEntry__c/TimeSheetEntry__c.object-meta.xml
<CustomObject>
    <label>TimeSheet Entry</label>
    <pluralLabel>TimeSheet Entries</pluralLabel>
    <nameField>
        <label>TimeSheet Entry ID</label>
        <type>AutoNumber</type>
        <displayFormat>TSE-{00000}</displayFormat>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>