TimewritingApp/force-app/main/default/objects/TimeSheetEntry__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>TimeSheet Entries</relationshipLabel>
    <relationshipName>TimeSheet_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>