TimewritingApp/force-app/main/default/objects/TimeSheetEntry__c/fields/Hours_Written__c.field-meta.xml
<CustomField>
    <fullName>Hours_Written__c</fullName>
    <label>Hours Written</label>
    <formula>(End_Time__c - Start_Time__c) * 24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>