TimewritingApp/force-app/main/default/objects/TimeSheetEntry__c/fields/Kilometers__c.field-meta.xml
<CustomField>
    <fullName>Kilometers__c</fullName>
    <label>Kilometers</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>