TimewritingApp/force-app/main/default/objects/TimeSheetEntry__c/fields/Mode_of_Transportation__c.field-meta.xml
<CustomField>
    <fullName>Mode_of_Transportation__c</fullName>
    <label>Mode of Transportation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Car</fullName>
            </value>
            <value>
                <fullName>Train</fullName>
            </value>
            <value>
                <fullName>Bus</fullName>
            </value>
            <value>
                <fullName>Plane</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>