TimewritingApp/force-app/main/default/objects/TimeSheetEntry__c/fields/TimeSheet__c.field-meta.xml
<CustomField>
    <fullName>TimeSheet__c</fullName>
    <label>TimeSheet</label>
    <referenceTo>TimeSheet__c</referenceTo>
    <relationshipLabel>TimeSheet Entries</relationshipLabel>
    <relationshipName>TimeSheet_Entries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>